// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`preprocess 1`] = `
"{
  \\"name\\": \\"@rxts/prettier-plugin-pkg\\",
  \\"version\\": \\"0.0.0\\",
  \\"description\\": \\"An opinionated package.json formatter plugin for Prettier\\",
  \\"repository\\": \\"git@github.com/rx-ts/prettier.git\\",
  \\"homepage\\": \\"https://github.com/rx-ts/prettier/blob/master/packages/pkg\\",
  \\"author\\": \\"JounQin <admin@1stg.me>\\",
  \\"license\\": \\"MPL-2.0\\",
  \\"engines\\": {
    \\"node\\": \\">= 8.0.0\\"
  },
  \\"main\\": \\"lib/cjs\\",
  \\"module\\": \\"lib/esm\\",
  \\"es2015\\": \\"lib/es2015\\",
  \\"files\\": [
    \\"lib\\",
    \\"rules\\",
    \\"LICENSE\\",
    \\"README.md\\"
  ],
  \\"keywords\\": [
    \\"package\\",
    \\"package.json\\",
    \\"pkg\\",
    \\"plugin\\",
    \\"prettier\\",
    \\"prettier-plugin\\"
  ],
  \\"scripts\\": {
    \\"bootstrap\\": \\"yarn build && tsc --module commonjs --outDir lib/cjs\\",
    \\"build\\": \\"ts-node -O '{\\\\\\"module\\\\\\":\\\\\\"commonjs\\\\\\"}' build\\"
  },
  \\"peerDependencies\\": {
    \\"prettier\\": \\"^1.18.2\\"
  }
}
"
`;

exports[`randomize 1`] = `
"{
  \\"name\\": \\"@rxts/prettier-plugin-pkg\\",
  \\"version\\": \\"0.0.0\\",
  \\"description\\": \\"An opinionated package.json formatter plugin for Prettier\\",
  \\"repository\\": \\"git@github.com/rx-ts/prettier.git\\",
  \\"homepage\\": \\"https://github.com/rx-ts/prettier/blob/master/packages/pkg\\",
  \\"author\\": \\"JounQin <admin@1stg.me>\\",
  \\"license\\": \\"MPL-2.0\\",
  \\"engines\\": {
    \\"node\\": \\">= 8.0.0\\"
  },
  \\"main\\": \\"lib/cjs\\",
  \\"module\\": \\"lib/esm\\",
  \\"es2015\\": \\"lib/es2015\\",
  \\"files\\": [
    \\"lib\\",
    \\"rules\\"
  ],
  \\"keywords\\": [
    \\"package\\",
    \\"package.json\\",
    \\"pkg\\",
    \\"plugin\\",
    \\"prettier\\",
    \\"prettier-plugin\\"
  ],
  \\"peerDependencies\\": {
    \\"prettier\\": \\"^1.18.2\\"
  },
  \\"commitlint\\": {
    \\"extends\\": [
      \\"@1stg\\"
    ]
  },
  \\"eslintIgnore\\": [
    \\"CHANGELOG.md\\",
    \\"lib\\",
    \\"!.*.js\\"
  ]
}
"
`;
